Can properly resize via button now
But when resizing happens hoverover effect is gone, will implement it into
the body of a function rather than the body of the script

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div id="container"></div>
-    <button>RESIZE GRID</button>
+    <button id="resizeBtn">RESIZE GRID</button>
     <script src="index.js"></script>
 </body>
 </html>
